src/test/ui/consts/promote-not.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:8:50
   |
LL | static mut TEST1: Option<&mut [i32]> = Some(&mut [1, 2, 3]);
   |                                        ----------^^^^^^^^^-
   |                                        |         |        |
   |                                        |         |        temporary value is freed at the end of this statement
   |                                        |         creates a temporary which is freed while still in use
   |                                        using this value as a static requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:11:18
   |
LL |     let x = &mut [1,2,3];
   |                  ^^^^^^^ creates a temporary which is freed while still in use
LL |     x
   |     - using this value as a static requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:20:32
   |
LL |         let _x: &'static () = &foo();
   |                 -----------    ^^^^^ creates a temporary which is freed while still in use
   |                 |
   |                 type annotation requires that borrow lasts for `'static`
LL |     }
   |     - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:20:17
   |
LL |         let _x: &'static () = &foo();
   |                 ^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:28:29
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |             |
   |             type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:28:13
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:33:29
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |             |
   |             type annotation requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:33:13
   |
LL |     let _x: &'static i32 = &unsafe { U { x: 0 }.x };
   |             ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:39:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
LL | };
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:39:15
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:46:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).0;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:46:15
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).0;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:47:29
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ----------    ^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:47:15
   |
LL |     let _val: &'static _ = &(Cell::new(1), 2).1;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:50:29
   |
LL |     let _val: &'static _ = &(1/0);
   |               ----------    ^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:50:15
   |
LL |     let _val: &'static _ = &(1/0);
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:51:29
   |
LL |     let _val: &'static _ = &(1/(1-1));
   |               ----------    ^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:51:15
   |
LL |     let _val: &'static _ = &(1/(1-1));
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:52:29
   |
LL |     let _val: &'static _ = &(1%0);
   |               ----------    ^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:52:15
   |
LL |     let _val: &'static _ = &(1%0);
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:53:29
   |
LL |     let _val: &'static _ = &(1%(1-1));
   |               ----------    ^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:53:15
   |
LL |     let _val: &'static _ = &(1%(1-1));
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:54:29
   |
LL |     let _val: &'static _ = &([1,2,3][4]+1);
   |               ----------    ^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:54:15
   |
LL |     let _val: &'static _ = &([1,2,3][4]+1);
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:57:29
   |
LL |     let _val: &'static _ = &TEST_DROP;
   |               ----------    ^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:57:15
   |
LL |     let _val: &'static _ = &TEST_DROP;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:59:29
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ----------    ^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:59:15
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:59:30
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ----------     ^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:59:15
   |
LL |     let _val: &'static _ = &&TEST_DROP;
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:62:29
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ----------    ^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:62:15
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:62:31
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ----------      ^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:62:15
   |
LL |     let _val: &'static _ = &(&TEST_DROP,);
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:65:29
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ----------    ^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |               |
   |               type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:65:15
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promote-not.rs:65:31
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ----------      ^^^^^^^^^    - temporary value is freed at the end of this statement
   |               |               |
   |               |               creates a temporary which is freed while still in use
   |               type annotation requires that borrow lasts for `'static`
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/promote-not.rs:65:15
   |
LL |     let _val: &'static _ = &[&TEST_DROP; 1];
   |               ^^^^^^^^^^

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0716`.
